Mostly fixed flexbox alignment issues, will leave exact fix for later

--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -12,11 +12,12 @@ section {
    margin: 5px;
    padding: 2%;
   //  height: 10rem;
+  width: 100%;
 
  }
  .full {
   padding: 2%;
-  margin: 5px;
+  margin: 10px;
  }
 
  .add {
@@ -46,6 +47,7 @@ article:hover {
 
 .incomplete-stories {
   display: flex;
+  width: 100%;
   // margin: 5px;
   justify-content: space-between;
 
